--- a/web/app/themes/brian-thompson/assets/styles/pages/_home.scss
+++ b/web/app/themes/brian-thompson/assets/styles/pages/_home.scss
@@ -183,7 +183,6 @@
         @include small-mono;
       }
     }
-    h5 {    }
   }
 
   .start-line,.start-button {
