--- a/web/app/themes/brian-thompson/assets/styles/pages/_single-post.scss
+++ b/web/app/themes/brian-thompson/assets/styles/pages/_single-post.scss
@@ -16,11 +16,14 @@
     }
     .category {
       position: relative;
+      p {
+        margin-bottom: $lh;
+      }
     }
   }
 
   .entry-content {
-    @include double-dash(25px,12px);
+    @include double-dash(29px,12px);
   }
 
   .nav-posts{
